# VortexArm

./: .gitignore
src/: README.md  dataflow-graph.html  dataflow.yml  requirements.txt  webcam.py
src/inverse_kinematics/: README.md  pyproject.toml
src/inverse_kinematics/inverse_kinematics/: inverse_kinematics.py  main.py  simulator.py
src/inverse_kinematics/inverse_kinematics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/inverse_kinematics/tests/: test_inverse_kinematics.py
src/ssc32u_controller/: README.md  pyproject.toml
src/ssc32u_controller/ssc32u_controller/: main.py  ssc32u.py
src/ssc32u_controller/ssc32u_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ssc32u_controller/tests/: test_ssc32u_controller.py
src/vision/: README.md  pyproject.toml
src/vision/tests/: test_vision.py
