[project]
name = "ssc32u_controller"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "ssc32u_controller"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["dora-rs >= 0.3.9"]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
ssc32u_controller = "ssc32u_controller.main:main"
